Fix wrong position of the language switcher

--- a/profiles/common/themes/ec_resp/css/ec_resp.css
+++ b/profiles/common/themes/ec_resp/css/ec_resp.css
@@ -7572,9 +7572,7 @@ tr.odd {
   padding: 0;
 }
 .lang-select-site .panel-body .lang-select-site__link {
-  display: block;
-  margin-top: -30px;
-  padding: 0;
+  font-size: 90%;
 }
 .lang-select-site .panel-body .lang-select-site__code {
   display: inline;
